tests/ui/higher-ranked/leak-check/project-param-env-candidate-universe-err.trait_bound_next.stderr
error[E0277]: the trait bound `T: TraitBound<'_>` is not satisfied
  --> $DIR/project-param-env-candidate-universe-err.rs:24:5
   |
LL |     trait_bound::<T>()
   |     ^^^^^^^^^^^^^^^^ the trait `TraitBound<'_>` is not implemented for `T`
   |
note: required by a bound in `trait_bound`
  --> $DIR/project-param-env-candidate-universe-err.rs:19:23
   |
LL | fn trait_bound<'b, T: TraitBound<'b>>() {}
   |                       ^^^^^^^^^^^^^^ required by this bound in `trait_bound`
help: consider further restricting this bound
   |
LL | fn satisfies_trait_bound<T: for<'b> Trait<'static, 'b> + TraitBound<'_>>() {
   |                                                        ++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
